2002-09-05  Rune Zedeler  <rune@zedeler.dk>

	* scm/output-lib.scm (make-molecule-boxer): Fixed and moved from
	input/test/boxed-molecule.ly

	* input/test/boxed-molecule.ly: Fixed to use default
	make-molecule-boxer

	* input/test/bar-number-every-fifth.ly: Added
	
	* lily/bar-number-engraver.cc: Add property barNumberVisibility
	and use it to decide which BarNumbers to suicide.
	
2002-09-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/test/poly-metric.ly: new file.

	* scripts/lilypond-book.py (output_verbatim): python 2.2 workaround.

	* scm/documentation-lib.scm (scm->string): print procedure name in
	stead of #<procedure .. > 

	* scripts/ly2dvi.py (run_lilypond): exit with error if lily exited
	any file with an error.

	* input/regression/molecule-hacking.ly: also restore Y
	extent. Fixes bugs with stem attachment of parenthesized note
	heads.

2002-09-04  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/test/clef-end-of-line.ly: new file.

	* lily/stem-engraver.cc (acknowledge_grob): warn about too long
	tremolos. Thanks to Erik Sandberg

	* input/trip.ly (fugaIIPedal): small cleanups.

	* lily/grob-pq-engraver.cc: more helpful message.
	(stop_translation_timestep): use scm_merge_x for merging the lists.

	* Documentation/user/appendices.itely: switch off parmesan listing

2002-09-01  Juergen Reuter  <reuter@ipd.uka.de>

	* input/test/ancient-font.ly, input/test/ancient-time.ly,
	  input/test/mensural-ligatures.ly, lily/ligature-head.cc,
	  lily/mensural-ligature-engraver.cc, lily/note-head.cc,
	  lily/time-signature.cc, scm/output-lib.scm: removed obsolete
	  code that sets grob property font-family; also small updates to
	  various input/test files.

2002-09-01  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/test/tab-staff.ly: removed.
	
	* lily/paper-def.cc (find_font): load virtual font for a list of
	font names.

	* scm/font.scm (paper20-style-sheet-alist): equate ancient and
	music font-families.
