@@ -8,10 +8,6 @@
 
 /* TODO:
 
- - merge create_ledger_line () and Note_head::create_ledger_line ()
-
- - rewrite create_ledger_line () to support short and thin ledger lines
-
  - do not show if a clef change immediately follows in the next line
 
  - decide: do or do not print custos if the next line starts with a rest
@@ -35,82 +31,82 @@ SCM
 Custos::brew_molecule (SCM smob)
 {
   Item *me = (Item *)unsmob_grob (smob);
-  SCM scm_style = me->get_grob_property ("style");
 
+  SCM scm_style = me->get_grob_property ("style");
+  String style;
   if (gh_symbol_p (scm_style))
     {
-      String style = ly_scm2string (scm_symbol_to_string (scm_style));
-
-      /*
-       * Shall we use a common custos font character regardless if on
-       * staffline or not, or shall we use individual font characters
-       * for both cases?
-       */
-      bool adjust =
-	to_boolean (me->get_grob_property ("adjust-if-on-staffline"));
-
-      String idx = "custodes-" + style + "-";
-
-      int neutral_pos;
-      SCM ntr_pos = me->get_grob_property ("neutral-position");
-      if (gh_number_p (ntr_pos))
-	neutral_pos = gh_scm2int (ntr_pos);
-      else
-	neutral_pos = 0;
-
-      Direction neutral_direction =
-	to_dir (me->get_grob_property ("neutral-direction"));
-
-      int pos = (int)rint (Staff_symbol_referencer::get_position (me));
-      int sz = Staff_symbol_referencer::line_count (me)-1;
-
-      if (pos < neutral_pos)
-	idx += "u";
-      else if (pos > neutral_pos)
-	idx += "d";
-      else if (neutral_direction == UP)
-	idx += "u";
-      else if (neutral_direction == DOWN)
-	idx += "d";
-      else // auto direction; not yet supported -> use "d"
-	idx += "d";
-
-      if (adjust)
-        {
-	  idx += (((pos ^ sz) & 0x1) == 0) ? "1" : "0";
-	}
-      else
-        {
-	  idx += "2";
-	}
-
-      Molecule molecule
-	= Font_interface::get_default_font (me)->find_by_name (idx);
-      if (molecule.empty_b ())
-        {
-	  String message = "no such custos: `" + idx + "'";
-	  warning (_ (message.to_str0 ()));
-	  return SCM_EOL;
-	}
-      else
-        {
-	  // add ledger lines
-	  int pos = (int)rint (Staff_symbol_referencer::get_position (me));
-	  int interspaces = Staff_symbol_referencer::line_count (me)-1;
-	  if (abs (pos) - interspaces > 1)
-	    {
-	      Molecule ledger_lines =
-		Note_head::brew_ledger_lines (me, pos, interspaces,
-					      molecule.extent (X_AXIS), true);
-	      molecule.add_molecule (ledger_lines);
-	    }
-	  return molecule.smobbed_copy ();
-	}
+      style = ly_scm2string (scm_symbol_to_string (scm_style));
     }
   else
-    return SCM_EOL;
-}
+    {
+      style = "mensural";
+    }
 
+  /*
+   * Shall we use a common custos font character regardless if on
+   * staffline or not, or shall we use individual font characters
+   * for both cases?
+   */
+  bool adjust =
+    to_boolean (me->get_grob_property ("adjust-if-on-staffline"));
+
+  int neutral_pos;
+  SCM ntr_pos = me->get_grob_property ("neutral-position");
+  if (gh_number_p (ntr_pos))
+    neutral_pos = gh_scm2int (ntr_pos);
+  else
+    neutral_pos = 0;
+
+  Direction neutral_direction =
+    to_dir (me->get_grob_property ("neutral-direction"));
+
+  int pos = (int)rint (Staff_symbol_referencer::get_position (me));
+  int sz = Staff_symbol_referencer::line_count (me)-1;
+
+  String font_char = "custodes-" + style + "-";
+  if (pos < neutral_pos)
+    font_char += "u";
+  else if (pos > neutral_pos)
+    font_char += "d";
+  else if (neutral_direction == UP)
+    font_char += "u";
+  else if (neutral_direction == DOWN)
+    font_char += "d";
+  else // auto direction; not yet supported -> use "d"
+    font_char += "d";
+
+  if (adjust)
+    {
+      font_char += (((pos ^ sz) & 0x1) == 0) ? "1" : "0";
+    }
+  else
+    {
+      font_char += "2";
+    }
+
+  Molecule molecule
+    = Font_interface::get_default_font (me)->find_by_name (font_char);
+  if (molecule.empty_b ())
+    {
+      me->warning (_f ("custos `%s' not found", font_char));
+      return SCM_EOL;
+    }
+  else
+    {
+      // add ledger lines
+      int pos = (int)rint (Staff_symbol_referencer::get_position (me));
+      int interspaces = Staff_symbol_referencer::line_count (me)-1;
+      if (abs (pos) - interspaces > 1)
+	{
+	  Molecule ledger_lines =
+	    Note_head::brew_ledger_lines (me, pos, interspaces,
+					  molecule.extent (X_AXIS), true);
+	  molecule.add_molecule (ledger_lines);
+	}
+      return molecule.smobbed_copy ();
+    }
+}
 
 ADD_INTERFACE (Custos, "custos-interface",
   "A custos is a staff context symbol that appears at the end of a
